Fix (Homepage): Hidden menu z-index.

--- a/src/common/layouts/main/Header/Header.module.sass
+++ b/src/common/layouts/main/Header/Header.module.sass
@@ -50,6 +50,8 @@
     justify-content: space-evenly
     width: 100%
 
+    z-index: 1
+
     position: fixed
     top: 0
     color: white
